fix: navbar z-index

--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ main {
   box-sizing: border-box;
   background-color: var(--white);
   box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.1);
+  z-index: 999;
 }
 
 #navbar ul {
